[package]
name = "web-image"
version = "0.3.0"
edition = "2021"
authors = ["Anshul Sanghi <anshul@anshulsanghi.tech>"]
description = "A crate for easy interop between web APIs and DynamicImage from `image-rs`"
homepage = "https://github.com/anshap1719/web-image"
repository = "https://github.com/anshap1719/web-image"
keywords = ["image", "wasm", "web-assembly"]
categories = ["multimedia"]
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.0", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dds",
] }
wasm-bindgen = "0.2.91"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.42"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.64"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "console",
    "CssStyleDeclaration",
    "EventTarget",
    "Blob",
    "ImageBitmap",
    "ImageBitmapOptions",
    "ColorSpaceConversion"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[lints.clippy]
# Clippy lint groups
correctness = { level = "deny", priority = 0 }
suspicious = { level = "deny", priority = 0 }
complexity = { level = "deny", priority = 0 }
perf = { level = "deny", priority = 0 }
style = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
cargo = { level = "deny", priority = 0 }

# Overrides
too_many_lines = { level = "deny", priority = 1 }
unwrap_used = { level = "deny", priority = 1 }
get_unwrap = { level = "deny", priority = 1 }
fallible_impl_from = { level = "deny", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
